# SEEING

./: .gitignore  Astrobigne.html  Astrobigne.ipynb  Astrobigne.slides.html  LICENSE  Mavis.frm  README.md  formulary.py  index.html  index.md  integrator.py  lambdifyDictionaries.py  pyproject.toml  requirements.txt  seeing.py  setup.py  sympyHelpers.py
.github/workflows/: publish.yml
astrobigne/: AstroBigneDemos.ipynb  Astrobigne.html  Astrobigne.ipynb  Astrobigne.slides.html
examples/: Propagation100.frm  examples.ipynb
seeing/: __init__.py  formulary.py  integrator.py  lambdifyDictionaries.py  lambdifyDictionariesGPU.py  seeing.py  sympyHelpers.py
tests/: coreTests.py  integratorTests.py
